# photo-server

./: .gitignore  Cargo.toml  README.md
document_root/album/: README.txt
src/: main.rs  server.rs
