[package]
name = "photo_server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = {version = "0.25.8", default-features = false, features = ["rayon", "jpeg"]}
tiny_http = "0.12"
url = "2.4.1"
url-escape = "0.1.1"
